--- a/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
+++ b/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Blurhash.ImageSharp" Version="3.0.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
+  </ItemGroup>
+
 </Project>
