Add support for resizing and saving images in the WebP format.
- Added a new file `bulldog.webp` to the project.
- Modified the `.csproj` file to include `bulldog.webp` as a resource.
- Updated `Program.cs` to load `bulldog.webp`, resize it using a smart resize algorithm, and save it as `output.webp`.
- Added a new class `ImageProcessor` with methods for smart resizing and applying rounded corners.
- Added a new class `AspectRatio` with predefined aspect ratios.
- Updated the `.csproj` file to include the package reference for SixLabors.ImageSharp.Drawing.

--- a/ProcessingPipeline.Console/ProcessingPipeline.Console.csproj
+++ b/ProcessingPipeline.Console/ProcessingPipeline.Console.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\ProcessingPipeline.ImageSharp\ProcessingPipeline.ImageSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="bulldog.webp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
