--- a/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
+++ b/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Blurhash.ImageSharp" Version="3.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
