--- a/ProcessingPipeline.Console/ProcessingPipeline.Console.csproj
+++ b/ProcessingPipeline.Console/ProcessingPipeline.Console.csproj
@@ -15,6 +15,8 @@
     <None Update="bulldog.webp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="bin\Debug\net8.0\15542038745ca344e267fb80.webp" />
+    <None Include="bin\Debug\net8.0\Landscape-Color.jpg" />
   </ItemGroup>
 
 </Project>
