--- a/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
+++ b/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
@@ -4,6 +4,17 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+      <Authors>Andrew Xia</Authors>
+      <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+      <Description>Fit images to specified aspect ratio while filling edges with blurred image.</Description>
+      <Copyright>2023</Copyright>
+      <Product>JalexSocial.ProcessingPipeline.ImageSharp</Product>
+      <PackageProjectUrl>https://github.com/JalexSocial/ProcessingPipeline.ImageSharp</PackageProjectUrl>
+      <RepositoryType>git</RepositoryType>
+      <PackageReadmeFile>README.md</PackageReadmeFile>
+      <Version>1.0.0</Version>
+      
   </PropertyGroup>
 
   <ItemGroup>
