--- a/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
+++ b/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
@@ -4,17 +4,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
       <Authors>Andrew Xia</Authors>
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
       <Description>Fit images to specified aspect ratio while filling edges with blurred image.</Description>
       <Copyright>2023</Copyright>
-      <Product>JalexSocial.ProcessingPipeline.ImageSharp</Product>
+      <Product>ProcessingPipeline.ImageSharp</Product>
       <PackageProjectUrl>https://github.com/JalexSocial/ProcessingPipeline.ImageSharp</PackageProjectUrl>
       <RepositoryType>git</RepositoryType>
       <PackageReadmeFile>README.md</PackageReadmeFile>
       <Version>1.0.0</Version>
-      
+      <PackageIcon>logo-transparent.png</PackageIcon>     
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,4 +22,16 @@
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="logo-transparent.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+	<None Include="..\README.md">
+		<Pack>True</Pack>
+		<PackagePath></PackagePath>
+	</None>
+	<None Include="..\LICENSE.txt" Pack="true" PackagePath="LICENSE.txt" />    
+  </ItemGroup>
+  
 </Project>
