--- a/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
+++ b/ProcessingPipeline.ImageSharp/ProcessingPipeline.ImageSharp.csproj
@@ -12,11 +12,12 @@
       <PackageProjectUrl>https://github.com/JalexSocial/ProcessingPipeline.ImageSharp</PackageProjectUrl>
       <RepositoryType>git</RepositoryType>
       <PackageReadmeFile>README.md</PackageReadmeFile>
-      <Version>1.0.2</Version>
+      <Version>1.0.3</Version>
       <PackageIcon>logo-transparent.png</PackageIcon>     
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blurhash.Core" Version="2.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.4" />
   </ItemGroup>
